# bskycli

./: .gitignore  Cargo.toml  README.md  Readme.md  uninstall.sh
src/: action.rs  app.rs  config.rs  event.rs  lib.rs  main.rs  tui.rs
src/api/: auth.rs  client.rs  login_form.rs  mod.rs  oauth.rs  session.rs  wrapper.rs
src/models/: feed.rs  mod.rs  notifications.rs  post.rs  preferences.rs  thread.rs
src/ui/: composer.rs  help.rs  login.rs  logout.rs  mod.rs  notifications.rs  post_widget.rs  profile.rs  search.rs  statusbar.rs  tabs.rs  thread.rs  timeline.rs  user_prefs.rs
src/utils/: meta.rs  mod.rs  text.rs
