[package]
name = "bskycli"
version = "0.4.6"
edition = "2024"
description = "Bluesky from the terminal"
license = "MIT"

[[bin]]
name = "bsky"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bsky-sdk = "0.1"
atrium-api = { version = "0.25", features = ["namespace-appbsky"] }
reqwest = { version = "0.12", features = ["json"] }
p256 = { version = "0.13", features = ["jwk", "ecdsa"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
open = "5"
ratatui-image = { version = "10.0", default-features = false, features = [] }
image = "0.25"
url = "2"
ipld-core = "0.4.3"
dirs = "5"
ratatui-textarea = "0.9.1"
atrium-xrpc-client = "0.5.15"
keyring-core = "1.0.0"
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
toml = "1.1.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
